--- a/Index.HTML
+++ b/Index.HTML
@@ -1,11 +1,8 @@
 <html>
     <body>
         <title>
-            Hola mundo
-            Hola mundo 2  Comandos basicos 
-            Version 4
-                Volver en el tiempo Git Reset Git -Git Checout
-            Version 5.
+            Hola mundus
+           para segundo commit
 
         </title>
     </body>
